--- a/style.css
+++ b/style.css
@@ -14,9 +14,15 @@ p {
     font-size: 16px;
 }
 
-h1, h2, h3, h4, h5, strong, b {
+h1, h2, h3, h4, h5 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
+
+b, strong, a {
     font-family: "Cutive", serif;
-    font-weight: 400;
+    font-weight: 600;
     font-style: normal;
 }
 
@@ -98,7 +104,13 @@ h1 {
 }
 
 h1.titulo {
-    text-shadow: 1px 2px 3px rgba(0, 0, 0, .12);
+    font-size: 2.4rem;
+    text-align: right;
+    line-height: 1rem;
+}
+
+.titulo p {
+    font-size: 1.7rem;
 }
 
 .footer {
